Decimals not showing over 100m or 100 feet #52729

Closed
opened 2017-09-13 17:45:38 +02:00 by Anton · 10 comments

System Information
Windows 10 Professional 64-bit, Nvidia GeForce GTX 470.

Blender Version
Broken: Blender 2.79
Worked: Turning on "Separate Units"

Short description of error
When scaling or changing dimensions, over 100 meters or feet, the decimals doesn't show at all. This was not present in Blender 2.78c.

Exact steps for others to reproduce the error
Open .blend file, look at dimensions for the cube.
Decimal bug.blend

**System Information** Windows 10 Professional 64-bit, Nvidia GeForce GTX 470. **Blender Version** Broken: Blender 2.79 Worked: Turning on "Separate Units" **Short description of error** When scaling or changing dimensions, over 100 meters or feet, the decimals doesn't show at all. This was not present in Blender 2.78c. **Exact steps for others to reproduce the error** Open .blend file, look at dimensions for the cube. [Decimal bug.blend](https://archive.blender.org/developer/F794892/Decimal_bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @SkullKid2000

Added subscriber: @SkullKid2000

Added subscribers: @mont29, @Sergey

Added subscribers: @mont29, @Sergey
Bastien Montagne was assigned by Sergey Sharybin 2017-09-14 15:10:53 +02:00

@mont29, the file has cube at 100 BU eexactly, however scaling it up a bit indeed doesn't show anything apart from meters, going back to BU shows all the decimal points. So doesn't seem to be a precision issue. Do you mind having a look? :)

@mont29, the file has cube at 100 BU eexactly, however scaling it up a bit indeed doesn't show anything apart from meters, going back to BU shows all the decimal points. So doesn't seem to be a precision issue. Do you mind having a look? :)

Thing is, new code now always show same amount of significant digits - 3 in case of unit display by default. Previous one was showing from 4 to 6, will check on bringing one more, but it really does not makes much sense to show more in units display imho…

Thing is, new code now always show same amount of significant digits - 3 in case of unit display by default. Previous one was showing from 4 to 6, will check on bringing one more, but it really does not makes much sense to show more in units display imho…
Author

I'm sorry for not replying earlier... computer problems. I see, well I was not sure if this was intentional to display less decimals over 100 meters or feet. For me, my model is 458.45 meters long. And the decimals matters "somewhat", as I want it as close to the real thing as possible.

I'm sorry for not replying earlier... computer problems. I see, well I was not sure if this was intentional to display less decimals over 100 meters or feet. For me, my model is 458.45 meters long. And the decimals matters "somewhat", as I want it as close to the real thing as possible.

This issue was referenced by 3c1c3b64c5

This issue was referenced by 3c1c3b64c532182ee9273929e89005f2c195b2be

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Set it to 5 digits, like e.g. for location.

Set it to 5 digits, like e.g. for location.
Author

This comment was removed by @SkullKid2000

*This comment was removed by @SkullKid2000*
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52729
No description provided.