Fix T52729: Decimals not showing over 100m or 100 feet

Use same 5 digits precision as we already use for e.g. Object's
location, for Object's dimensions too.

To be backported to 2.79a, should we do it.